# chip-8

./: CMakeLists.txt  chip8.cpp  chip8.h  io.h  main.cpp
src/: CMakeLists.txt  chip8.cpp  chip8.h
src/core/: CMakeLists.txt  chip8.cpp  io.hpp
src/gui/: CMakeLists.txt  main.cpp
